# valve-tuner

./: .gitignore  CMakeLists.txt  CMakePresets.json  Main.qml  toolchain.cmake
.github/workflows/: ci.yml
src/: CRC.cpp  CRC.h  Controller.cpp  Controller.h  Insufflator.h  SendAndReadData.h  SendandReadData.h  USART.h  main.cpp  orders.h
